--- a/app/views/agencies/_tokani_form.html.erb
+++ b/app/views/agencies/_tokani_form.html.erb
@@ -75,9 +75,7 @@
         </div>
         <div class="sm:col-span-3">
           <label for="street-address" class="block text-sm font-medium text-gray-700">Time zones *</label>
-          <div data-controller="multiselect" data-multiselect-items-value='<%= time_zone_select_options %>' data-placeholder="Time zones ..." <%= raw selected_time_zones(agency.new_record?, @selected_time_zones) %>>
-            <select multiple="multiple" class="hidden multiselect__hidden" data-multiselect-target="hidden" name="agency[agency_detail_attributes][time_zones][]" id="agency_agency_detail_attributes_time_zones" style="display: none;"></select>
-          </div>
+          <%= agency_detail.select :time_zones, options_for_select(time_zone_select_options), class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %> 
         </div>
       </div>
     </div>
@@ -154,12 +152,12 @@
   <% end %>
   <div class="pt-5">
     <div class="flex justify-end">
-      <% if form.object.new_record? %>
+      <% if form.object.new_record? %> 
+        <%= link_to t("cancel"), agencies_path, class: "mr-3 inline-flex justify-center rounded-md border bg-transparent border-tokaniprimary-600 py-2 px-3.5 text-sm font-medium text-tokaniprimary-600 shadow-sm hover:bg-tokaniprimary-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %> 
         <%= form.button "Create Agency", class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
-        <%= link_to t("cancel"), agencies_path, class: "ml-3 inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %> 
       <% else %>
+        <%= link_to t("cancel"), agency_path(@agency), class: "mr-3 inline-flex justify-center rounded-md border bg-transparent border-tokaniprimary-600 py-2 px-3.5 text-sm font-medium text-tokaniprimary-600 shadow-sm hover:bg-tokaniprimary-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %> 
         <%= form.button "Update Agency", class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
-        <%= link_to t("cancel"), agency_path(@agency), class: "ml-3 inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %> 
       <% end %>
     </div>
   </div>
