--- a/app/views/providers/_form.html.erb
+++ b/app/views/providers/_form.html.erb
@@ -1,52 +1,49 @@
 <div>
   <% form_url = provider.new_record? ? providers_path : provider_path(provider) %>
   <%= form_with(model: provider, url: form_url) do |form| %>
-  <%= render "shared/error_messages", resource: form.object %>
-      <div class="mt-5 md:col-span-2 md:mt-0">
-        <div class="overflow-hidden shadow sm:rounded-md">
-          <div class="bg-white px-4 py-5 sm:p-6">
-            <div class="grid grid-cols-6 gap-6">
-              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                  <%= form.label "First Name*", class: "block text-sm font-medium text-gray-700" %>
-                  <%= form.text_field :first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
-              </div>
-              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                <%= form.label "Last Name*", class: "block text-sm font-medium text-gray-700" %>
-                <%= form.text_field :last_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
-              </div>
-              <div class="col-span-6 sm:col-span-3">
-                <%= form.label "Email*", class: "block text-sm font-medium text-gray-700" %>
-                <%= form.text_field :email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
-              </div>
-              <div class="col-span-6 sm:col-span-3">
-                <%= form.label "Primary Phone*", class: "block text-sm font-medium text-gray-700" %>
-                <%= form.text_field :primary_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
-              </div>
-
-              <div class="col-span-6 sm:col-span-3 mt-4">
-                <div class="relative flex items-start">
-                  <div class="flex h-5 items-center">
-                    <%= form.check_box :allow_text, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>  
-                  </div>
-                  <div class="ml-3 text-sm">
-                    <%= form.label :allow_text, class:"font-medium text-gray-700" %>
-                    <p id="allow_text" class="text-gray-500">This provider gets text notifications.</p>
-                  </div> 
+    <%= render "shared/error_messages", resource: form.object %>
+    <div class="mt-5 md:col-span-2 md:mt-0">
+      <div class="overflow-hidden shadow sm:rounded-md">
+        <div class="bg-white px-4 py-5 sm:p-6">
+          <div class="grid grid-cols-6 gap-6">
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= form.label "First Name*", class: "block text-sm font-medium text-gray-700" %>
+              <%= form.text_field :first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+              <%= form.label "Last Name*", class: "block text-sm font-medium text-gray-700" %>
+              <%= form.text_field :last_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-3">
+              <%= form.label "Email*", class: "block text-sm font-medium text-gray-700" %>
+              <%= form.text_field :email, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-3">
+              <%= form.label "Primary Phone*", class: "block text-sm font-medium text-gray-700" %>
+              <%= form.text_field :primary_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+            </div>
+            <div class="col-span-6 sm:col-span-3 mt-4">
+              <div class="relative flex items-start">
+                <div class="flex h-5 items-center">
+                  <%= form.check_box :allow_text, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>  
                 </div>
+                <div class="ml-3 text-sm">
+                  <%= form.label :allow_text, class:"font-medium text-gray-700" %>
+                  <p id="allow_text" class="text-gray-500">This provider gets text notifications.</p>
+                </div> 
               </div>
-
-              <div class="col-span-6 sm:col-span-3 mt-4">
-                <div class="relative flex items-start">
-                  <div class="flex h-5 items-center">
-                    <%= form.check_box :allow_email, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>  
-                  </div>
-                  <div class="ml-3 text-sm">
-                    <%= form.label :allow_email, class:"font-medium text-gray-700" %>
-                    <p id="allow_email" class="text-gray-500">This provider gets email notifications.</p>
-                  </div> 
+            </div>
+            <div class="col-span-6 sm:col-span-3 mt-4">
+              <div class="relative flex items-start">
+                <div class="flex h-5 items-center">
+                  <%= form.check_box :allow_email, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>  
                 </div>
+                <div class="ml-3 text-sm">
+                  <%= form.label :allow_email, class:"font-medium text-gray-700" %>
+                  <p id="allow_email" class="text-gray-500">This provider gets email notifications.</p>
+                </div> 
               </div>
-
+            </div>
             <div class="col-span-6 sm:col-span-6" data-controller="select-group">
               <% unless customer_logged_in? %>
                 <div class="col-span-3 sm:col-span-3">
@@ -62,29 +59,26 @@
                   <%= form.select :site_id, options_from_collection_for_select(sites, :id, :name, provider.site_id), {include_blank: 'None'}, {disabled: @field_disabled, class: 'form-control', data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: department_select_list_sites_path, select_group_select_key_param: 'site_id', select_group_select_update_target_param: 'provider_department_id'}} %>
                 </div>
              </div>
-              <div class="col-span-3 sm:col-span-3">
-                <div class="form-group">
-                  <%= form.label :department_id, class: 'text-blueCoral' %>
-                  <%= form.select :department_id, options_from_collection_for_select(departments, :id, :name, provider.department_id), {include_blank: 'None'}, {disabled: @field_disabled, class: 'form-select'} %>
-                </div>
+            <div class="col-span-3 sm:col-span-3">
+              <div class="form-group">
+                <%= form.label :department_id, class: 'text-blueCoral' %>
+                <%= form.select :department_id, options_from_collection_for_select(departments, :id, :name, provider.department_id), {include_blank: 'None'}, {disabled: @field_disabled, class: 'form-select'} %>
               </div>
             </div>
-            </div>
           </div>
-          <br>
-         
-          <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
-              <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
-              <% if form.object.new_record? %>
-                  <%= link_to t("cancel"), providers_path, class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
-              <% else %>
-                  <%= link_to t("cancel"), provider_path(@provider), class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
-              <% end %>
-          </div>
-        </div> 
-      </div> 
-  </div>
-<% end %>
+        </div>
+      </div>
+      <br>
+      <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">              
+        <% if form.object.new_record? %>
+          <%= link_to t("cancel"), providers_path, class:"inline-flex justify-center rounded-md border bg-transparent border-tokaniprimary-600 py-2 px-3.5 text-sm font-medium text-tokaniprimary-600 shadow-sm hover:bg-tokaniprimary-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+        <% else %>
+          <%= link_to t("cancel"), provider_path(@provider), class:"inline-flex justify-center rounded-md border bg-transparent border-tokaniprimary-600 py-2 px-3.5 text-sm font-medium text-tokaniprimary-600 shadow-sm hover:bg-tokaniprimary-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+        <% end %>
+        <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+      </div>
+    </div>
+  <% end %>
 </div>
 
 
