--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -1,14 +1,14 @@
 <div>
   <% form_url = recipient.new_record? ? recipients_path : recipient_path(recipient) %>
   <%= form_with(model: recipient, url: form_url) do |form| %>
-  <%= render "shared/error_messages", resource: form.object %>
+    <%= render "shared/error_messages", resource: form.object %>
       <div class="mt-5 md:col-span-2 md:mt-0">
         <div class="overflow-hidden shadow sm:rounded-md">
           <div class="bg-white px-4 py-5 sm:p-6">
             <div class="grid grid-cols-6 gap-6">
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                  <%= form.label "First Name*", class: "block text-sm font-medium text-gray-700" %>
-                  <%= form.text_field :first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+                <%= form.label "First Name*", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :first_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
               </div>
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
                 <%= form.label "Last Name*", class: "block text-sm font-medium text-gray-700" %>
@@ -30,7 +30,6 @@
                 <%= form.label :mobile_phone, class: "block text-sm font-medium text-gray-700" %>
                 <%= form.text_field :mobile_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
               </div>
-
               <div class="col-span-6 sm:col-span-3 mt-4">
                 <div class="relative flex items-start">
                   <div class="flex h-5 items-center">
@@ -42,7 +41,6 @@
                   </div> 
                 </div>
               </div>
-
               <div class="col-span-6 sm:col-span-3 mt-4">
                 <div class="relative flex items-start">
                   <div class="flex h-5 items-center">
@@ -66,18 +64,17 @@
             </div>
           </div>
           <br>
-         
           <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
-              <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
-              <% if form.object.new_record? %>
-                  <%= link_to t("cancel"), recipients_path, class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
-              <% else %>
-                  <%= link_to t("cancel"), recipient_path(@recipient), class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
-              <% end %>
+            <% if form.object.new_record? %>
+              <%= link_to t("cancel"), recipients_path, class:"inline-flex justify-center rounded-md border bg-transparent border-tokaniprimary-600 py-2 px-3.5 text-sm font-medium text-tokaniprimary-600 shadow-sm hover:bg-tokaniprimary-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+            <% else %>
+              <%= link_to t("cancel"), recipient_path(@recipient), class:"inline-flex justify-center rounded-md border bg-transparent border-tokaniprimary-600 py-2 px-3.5 text-sm font-medium text-tokaniprimary-600 shadow-sm hover:bg-tokaniprimary-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+            <% end %>
+            <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
           </div>
         </div> 
       </div> 
-  </div>
-<% end %>
+    </div>
+  <% end %>
 </div>
 
