--- a/app/views/shared/_customer_sidenav.html.erb
+++ b/app/views/shared/_customer_sidenav.html.erb
@@ -1,5 +1,5 @@
 <!-- Off-canvas menu for mobile, show/hide based on off-canvas menu state. -->
-<% if policy(:agency_admin).show_side_nav?(controller_name) %>
+<% if policy(:customer_admin).show_side_nav?(controller_name) %> 
   <div class="relative z-40 md:hidden" role="dialog" aria-modal="true">
     <div class="fixed inset-0 bg-gray-600 bg-opacity-75"></div>
     <div class="fixed inset-0 z-40 flex">
@@ -154,22 +154,6 @@
             </a>
             <div data-toggle-target='toggleable' class="hidden pl-4 py-2 space-y-2">
               <ul class="list-none">
-                <li class="pl-4">
-                  <%= link_to customer_categories_path,  class: "text-gray-100 hover:bg-gray-50 hover:opacity-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 384 512" stroke-width="1" stroke="currentColor" class="text-gray-100 group-hover:text-gray-500 mr-3 flex-shrink-0 h-4 w-4">
-                      <path d="M329.1 142.9c-62.5-62.5-155.8-62.5-218.3 0s-62.5 163.8 0 226.3s155.8 62.5 218.3 0c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3c-87.5 87.5-221.3 87.5-308.8 0s-87.5-229.3 0-316.8s221.3-87.5 308.8 0c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0z"/>
-                    </svg>
-                    Customer Categories
-                  <% end %>
-                </li>
-                <li class="pl-4">
-                  <%= link_to customers_path,  class: "text-gray-100 hover:bg-gray-50 hover:opacity-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 384 512" stroke-width="1" stroke="currentColor" class="text-gray-100 group-hover:text-gray-500 mr-3 flex-shrink-0 h-4 w-4">
-                      <path d="M329.1 142.9c-62.5-62.5-155.8-62.5-218.3 0s-62.5 163.8 0 226.3s155.8 62.5 218.3 0c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3c-87.5 87.5-221.3 87.5-308.8 0s-87.5-229.3 0-316.8s221.3-87.5 308.8 0c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0z"/>
-                    </svg>
-                  Customers
-                  <% end %>
-                </li>
                 <li class="pl-4">
                   <%= link_to sites_path,  class: "text-gray-100 hover:bg-gray-50 hover:opacity-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 384 512" stroke-width="1" stroke="currentColor" class="text-gray-100 group-hover:text-gray-500 mr-3 flex-shrink-0 h-4 w-4">
